<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="22dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimens_8dp">

                <ImageView
                    android:id="@+id/icon_image_view"
                    style="@style/UrbanizationMaterialMessageSuccessSign"
                    tools:src="@drawable/ic_material_ok_green"/>

            </FrameLayout>

            <TextView
                android:id="@+id/title_text_view"
                style="@style/UrbanizationMaterialMessageSuccessSignTitle"
                tools:text="Pago #10"/>

            <TextView
                android:id="@+id/subtitle_text_view"
                style="@style/UrbanizationMaterialMessageSuccessSignSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/succesful_payment_send" />

            <LinearLayout
                android:id="@+id/extra_action_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    android:id="@+id/extra_action_button"
                    style="@style/Urbanization.PrimaryButton.Colored.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_16dp"
                    android:text="@string/action_accept" />
                <Button
                    android:id="@+id/cancel_button"
                    style="@style/Inalambrik.PrimaryButton.Borderless.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/action_cancel" />
            </LinearLayout>

            <Button
                android:id="@+id/accept_button"
                style="@style/Urbanization.PrimaryButton.Colored.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_16dp"
                android:text="@string/action_accept" />

        </LinearLayout>
    </FrameLayout>
</layout>