<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.example.santoriniapp.modules.dashboard.DashboardMenuActivityViewModelResponse"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            style="@style/UrbanizationMaterialToolbarWithSubtitle"
            app:title="@string/welcome"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:visible="@{viewModel.showMenuList()}">

            <!-- Loading Payments -->
            <LinearLayout
                android:id="@+id/loading_menu_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="40dp"
                android:gravity="center"
                app:visible="@{viewModel.isLoading}"
                android:background="@color/default_background"
                tools:visibility="gone">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/dashboard_menu_text"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/online_process_can_take_while"
                    android:textSize="12sp"
                    android:textColor="@color/material_black_hint"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/general_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:orientation="vertical"
                android:background="#ddd"
                tools:visibility="visible"
                app:visible="@{viewModel.showMenuList()}"
                android:descendantFocusability="blocksDescendants">

                <!-- Panel Header Container (includes user pricture, name) -->
                <LinearLayout
                    android:id="@+id/user_info_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <!-- START: User Name, Imei and User Picture container -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <!-- User Image -->
                        <FrameLayout
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:paddingTop="@dimen/dimens_4dp"
                            android:layout_marginRight="4dp"
                            android:layout_marginEnd="4dp">

                            <ImageView
                                android:id="@+id/user_picture_image_view"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center_horizontal|center_vertical"
                                tools:ignore="ContentDescription"
                                tools:src="@drawable/ic_person_black_24dp" />

                        </FrameLayout>

                        <!-- User name / IMEI -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingLeft="4dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/user_name_text_view"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:maxLines="1"
                                    android:ellipsize="end"
                                    android:textColor="@color/material_black_primary"
                                    android:textSize="16sp"
                                    android:text="@{viewModel.userName}"
                                    tools:text="Jonathan de Los Palotes" />


                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="CI: "
                                    android:textColor="@color/material_black_secondary"
                                    android:textSize="14sp" />

                                <TextView
                                    android:id="@+id/user_imei_text_view"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/material_black_secondary"
                                    android:textSize="14sp"
                                    android:text="@{viewModel.taxpayerId}"
                                    tools:text="0927591891" />

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>
                    <!-- END: User Name, Imei and User Picture container -->

                    <!-- START: AccountLogo Container -->
                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimens_4dp"
                        android:id="@+id/logo_picture_container"
                        tools:visibility="visible"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/logo_picture_image_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            tools:ignore="ContentDescription"
                            android:adjustViewBounds="true"
                            android:maxHeight="50dp"
                            tools:src="@drawable/santorini_logo"/>


                    </LinearLayout>

                </LinearLayout>
                <!-- END: AccountLogo Container -->

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/menu_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#ddd"
                    android:paddingTop="2dp"/>

            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</layout>